menambahkan css mask

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!-- Products section -->
     <section id="products" class="products">
       <h2><span>Produk Unggulan</span> Kami</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum officiis excepturi, qui culpa sed facere!</p>
+      <p>Produk-produk dari Kehidupan Latte</p>
 
       <div class="row">
         <div class="product-card">
