--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="css/style.css" />
+
+    <!-- Alpinejs -->
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+    <!-- App -->
+    <script src="src/app.js"></script>
   </head>
   <body>
     <!-- navbar start -->
-    <nav class="navbar">
+    <nav class="navbar" x-data>
       <a href="#" class="navbar-logo">kehidupan<span>Latte.</span></a>
       <div class="navbar-nav">
         <a href="#">Home</a>
@@ -23,7 +29,10 @@
       </div>
       <div class="navbar-extra">
         <a href="#" id="search-button"><i data-feather="search"></i></a>
-        <a href="#" id="shopping-cart-button"><i data-feather="shopping-cart"></i></a>
+        <a href="#" id="shopping-cart-button">
+          <i data-feather="shopping-cart"></i>
+          <span class="quantity-badge" x-show="$store.cart.quantity" x-text="$store.cart.quantity"></span>
+        </a>
         <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
       </div>
 
@@ -36,29 +45,40 @@
 
       <!-- Shopping cart -->
       <div class="shopping-cart">
-        <div class="cart-item">
-          <img src="img/products/coffe-beans.jpg" alt="Produk 1" />
-          <div class="item-detail">
-            <h3>Produk 1</h3>
-            <div class="item-price">IDR 30K</div>
+        <template x-for="(item, index) in $store.cart.items" x-keys="index">
+          <div class="cart-item">
+            <img :src="`img/products/${item.img}`" alt="item.name" />
+            <div class="item-detail">
+              <h3 x-text="item.name"></h3>
+              <div class="item-price">
+                <span x-text="rupiah(item.price)"></span> &times;
+                <button id="remove" @click="$store.cart.remove(item.id)">&minus;</button>
+                <span x-text="item.quantity"></span>
+                <button id="add" @click="$store.cart.add(item)">&plus;</button>&equals;
+                <span x-text="rupiah(item.total)"></span>
+              </div>
+            </div>
           </div>
-          <i data-feather="trash-2" class="remove-item"></i>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/coffe-beans1.jpg" alt="Produk 2" />
-          <div class="item-detail">
-            <h3>Produk 2</h3>
-            <div class="item-price">IDR 30K</div>
-          </div>
-          <i data-feather="trash-2" class="remove-item"></i>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/coffe-beans2.jpg" alt="Produk 3" />
-          <div class="item-detail">
-            <h3>Produk 3</h3>
-            <div class="item-price">IDR 30K</div>
-          </div>
-          <i data-feather="trash-2" class="remove-item"></i>
+        </template>
+        <h4 x-show="!$store.cart.items.length">Cart is Empty</h4>
+        <h4 x-show="$store.cart.items.length">Total : <span x-text="rupiah($store.cart.total)"></span></h4>
+
+        <div class="form-container" x-show="$store.cart.items.length">
+          <form action="" id="checkout-form"></form>
+          <h5>Custumer Detail</h5>
+          <label for="name">
+            <span>Name</span>
+            <input type="text" name="name" id="name" />
+          </label>
+          <label for="email">
+            <span>Email</span>
+            <input type="email" name="email" id="email" />
+          </label>
+          <label for="phone">
+            <span>Phone</span>
+            <input type="number" name="phone" id="phone" autocapitalize="off" />
+          </label>
+          <button class="checkout-button" type="submit" id="checkout-button" value="checkout">Checkout</button>
         </div>
       </div>
       <!-- Shopping cart end -->
@@ -140,71 +160,49 @@
     <!-- Menu section end-->
 
     <!-- Products section -->
-    <section id="products" class="products">
+    <section id="products" class="products" x-data="products">
       <h2><span>Produk Unggulan</span> Kami</h2>
       <p>Produk-produk dari Kehidupan Latte</p>
 
       <div class="row">
-        <div class="product-card">
-          <div class="product-icons">
-            <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#" class="detail-item-button"><i data-feather="eye"></i></a>
-          </div>
-          <div class="product-img">
-            <img src="img/products/coffe-beans.jpg" alt="produk 1" />
-          </div>
-          <div class="product-content">
-            <h3>Coffee Beans 1</h3>
-            <div class="product-stars">
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
+        <template x-for="(item, index) in items" x-keys="index">
+          <div class="product-card">
+            <div class="product-icons">
+              <a href="#" @click.prevent="$store.cart.add(item)">
+                <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <use href="img/feather-sprite.svg#shopping-cart" /></svg
+              ></a>
+              <a href="#" @click.prevent="open = true" class="detail-item-button"
+                ><svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <use href="img/feather-sprite.svg#eye" /></svg
+              ></a>
             </div>
-            <div class="product-price">IDR 30k <span>IDK 55k</span></div>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-icons">
-            <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#" class="detail-item-button"><i data-feather="eye"></i></a>
-          </div>
-          <div class="product-img">
-            <img src="img/products/coffe-beans1.jpg" alt="produk 2" />
-          </div>
-          <div class="product-content">
-            <h3>Coffee Beans 2</h3>
-            <div class="product-stars">
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star"></i>
+            <div class="product-img">
+              <img :src="`img/products/${item.img}`" alt="${item.name}" />
             </div>
-            <div class="product-price">IDR 30k <span>IDK 55k</span></div>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-icons">
-            <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#" class="detail-item-button"><i data-feather="eye"></i></a>
-          </div>
-          <div class="product-img">
-            <img src="img/products/coffe-beans2.jpg" alt="produk 3" />
-          </div>
-          <div class="product-content">
-            <h3>Coffee Beans 3</h3>
-            <div class="product-stars">
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
-              <i data-feather="star"></i>
+            <div class="product-content">
+              <h3 x-text="item.name"></h3>
+              <div class="product-stars">
+                <svg width="24" height="24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <use href="img/feather-sprite.svg#star" />
+                </svg>
+                <svg width="24" height="24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <use href="img/feather-sprite.svg#star" />
+                </svg>
+                <svg width="24" height="24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <use href="img/feather-sprite.svg#star" />
+                </svg>
+                <svg width="24" height="24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <use href="img/feather-sprite.svg#star" />
+                </svg>
+                <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <use href="img/feather-sprite.svg#star" />
+                </svg>
+              </div>
+              <div class="product-price"><span x-text="rupiah(item.price)"></span></div>
             </div>
-            <div class="product-price">IDR 30k <span>IDK 55k</span></div>
           </div>
-        </div>
+        </template>
       </div>
     </section>
     <!-- Products section end -->
